# services

./: .gitignore  Dockerfile  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/: deps.py  main.py
apps/api/src/routers/: __init__.py
apps/api/src/routers/browser/: __init__.py  common.py  router.py
apps/api/src/routers/profile/: __init__.py  router.py
apps/api/src/webhooks/: __init__.py
apps/edge/: pyproject.toml
apps/edge/src/: main.py
apps/edge/src/proxy/: __init__.py  deps.py
